--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,34 @@
 *,
 *:before,
-*:after{
+*:after {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+}
+
+.loader{
+    height: 350px;
+    width: 350px;
+    position: absolute;
+    margin: auto;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+}
+
+.loader div:nth-child(1){
+    background-color: #dd1c1c;
+    height: 200px;
+    width: 125px;
+    position: absolute;
+    margin: auto;
+    top: 0;
+    bottom: 0;
+    left: 40px;
+    right: 0;
+    transform: rotate(45deg);
+    border-radius: 100px 100px 10px 10px;
+    transform-origin: 50% 69%;
+    animation: flip1 4s linear infinite;
 }
