--- a/css/style.css
+++ b/css/style.css
@@ -32,3 +32,40 @@
     transform-origin: 50% 69%;
     animation: flip1 4s linear infinite;
 }
+
+@keyframes flip1{
+    25%{
+        transform: rotate(45deg) rotateX(180deg);
+    }
+    50%{
+        transform: rotate(45deg) rotateX(180deg);
+    }
+    75%{
+        transform: rotate(45deg);
+    }
+}
+
+.loader div:nth-child(2){
+    height: 200px;
+    width: 125px;
+    background-color:  #dd1c1c;
+    position: absolute;
+    top: 151px;
+    left: 132px;
+    transform: rotate(135deg);
+    transform-origin: 50% 31%;
+    border-radius: 10px 10px 100px 100px;
+    animation: flip2 4s 1s linear infinite;
+}
+
+@keyframes flip2{
+    25%{
+        transform: rotate(135deg) rotateX(180deg);
+    }
+    50%{
+        transform: rotate(135deg) rotateX(180deg);
+    }
+    75%{
+        transform: rotate(135deg);
+    }
+}
